--- a/labs/lab04/report/os2--lab04--report.qmd
+++ b/labs/lab04/report/os2--lab04--report.qmd
@@ -3,10 +3,10 @@
 
 ## Author
 author:
-  name: Дмитрий Сергеевич Кулябов
+  name: Гелдиев Ыхлас
   degrees: DSc
   orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
+  email: 1032249184@pfur.ru
   affiliation:
     - name: Российский университет дружбы народов
       country: Российская Федерация
@@ -14,8 +14,8 @@ author:
       city: Москва
       address: ул. Миклухо-Маклая, д. 6
 ## Title
-title: "Шаблон отчёта по лабораторной работе"
-subtitle: "Простейший вариант"
+title: "Лабораторная работа №4"
+subtitle: "Работа с программными пакетами"
 license: "CC BY"
 ## Generic options
 lang: ru-RU
@@ -34,7 +34,7 @@ bibliography:
 csl: _resources/csl/gost-r-7-0-5-2008-numeric.csl
 ## Formats
 format:
-### Pdf output format
+  ### Pdf output format
   pdf:
     toc: true
     number-sections: true
@@ -42,22 +42,22 @@ format:
     toc-depth: 2
     lof: true # List of figures
     lot: true # List of tables
-#### Document
+    #### Document
     documentclass: scrreprt
     papersize: a4
     fontsize: 12pt
     linestretch: 1.5
-#### Language
+    #### Language
     babel-lang: russian
     babel-otherlangs: english
-#### Biblatex
+    #### Biblatex
     cite-method: biblatex
     biblio-style: gost-numeric
     biblatexoptions:
       - backend=biber
       - langhook=extras
       - autolang=other*
-#### Misc options
+    #### Misc options
     csquotes: true
     indent: true
     header-includes: |
@@ -65,7 +65,7 @@ format:
       \usepackage{float}
       \floatplacement{figure}{H}
       \usepackage[math,RM={Scale=0.94},SS={Scale=0.94},SScon={Scale=0.94},TT={Scale=MatchLowercase,FakeStretch=0.9},DefaultFeatures={Ligatures=Common}]{plex-otf}
-### Docx output format
+  ### Docx output format
   docx:
     toc: true
     number-sections: true
@@ -74,44 +74,204 @@ format:
 
 # Цель работы
 
-Здесь приводится формулировка цели лабораторной работы. Формулировки цели для каждой лабораторной работы приведены в методических указаниях.
-
-Цель данного шаблона --- максимально упростить подготовку отчётов по лабораторным работам.  Модифицируя данный шаблон, студенты смогут без труда подготовить отчёт по лабораторным работам, а также познакомиться с основными возможностями разметки Markdown.
+Получить навыки работы с репозиториями и менеджерами пакетов
 
 # Задание
 
-Здесь приводится описание задания в соответствии с рекомендациями методического пособия и выданным вариантом.
-
-# Теоретическое введение
-
-Здесь описываются теоретические аспекты, связанные с выполнением работы.
-
-Например, в [табл. @tbl-std-dir] приведено краткое описание стандартных каталогов Unix.
-
-| Имя каталога | Описание каталога                                                                                                          |
-|--------------|----------------------------------------------------------------------------------------------------------------------------|
-| `/`          | Корневая директория, содержащая всю файловую                                                                               |
-| `/bin `      | Основные системные утилиты, необходимые как в однопользовательском режиме, так и при обычной работе всем пользователям     |
-| `/etc`       | Общесистемные конфигурационные файлы и файлы конфигурации установленных программ                                           |
-| `/home`      | Содержит домашние директории пользователей, которые, в свою очередь, содержат персональные настройки и данные пользователя |
-| `/media`     | Точки монтирования для сменных носителей                                                                                   |
-| `/root`      | Домашняя директория пользователя  `root`                                                                                   |
-| `/tmp`       | Временные файлы                                                                                                            |
-| `/usr`       | Вторичная иерархия для данных пользователя                                                                                 |
-
-: Описание некоторых каталогов файловой системы GNU Linux {#tbl-std-dir}
-
-Более подробно про Unix см. в [@tanenbaum_book_modern-os_ru; @robbins_book_bash_en; @zarrelli_book_mastering-bash_en; @newham_book_learning-bash_en].
+1. Изучите, как и в каких файлах подключаются репозитории для установки программного обеспечения; изучите основные возможности (поиск, установка, обновление, удаление пакета, работа с историей действий) команды dnf (см. раздел 4.4.1).
+2. Изучите и повторите процесс установки/удаления определённого пакета с использованием возможностей dnf (см. раздел 4.4.1).
+3. Изучите и повторите процесс установки/удаления определённого пакета с использованием возможностей rpm (см. раздел 4.4.2).
 
 # Выполнение лабораторной работы
 
-Описываются проведённые действия, в качестве иллюстрации даётся ссылка на иллюстрацию ([рис. @fig-001]).
+## Работа с репозиториями
 
-![V Сольвеевский конгресс (1927) «Электроны и фотоны»](image/solvay.jpg){#fig-001 width=70%}
+1. В консоли перейдите в режим работы суперпользователя (используйте команду `su -`) ([рис. @fig-001])
+
+2. Перейдите в каталог /etc/yum.repos.d и изучите содержание каталога и файлов репозиториев: ([рис. @fig-001])
+   `cd /etc/yum.repos.d`
+   `ls`
+   `cat название_репозитория.repo`
+
+   ![Переход](image/root_start.png){#fig-001}
+
+3. Выведите на экран список репозиториев: ([рис. @fig-002])
+   `dnf repolist`
+   и поясните полученную информацию.
+
+4. Выведите на экран список пакетов, в названии или описании которых есть слово user: ([рис. @fig-002])
+   `dnf search user`
+   и поясните полученную информацию.
+
+![Операции с dnf](image/dnf_repolist_search.png){#fig-002}
+
+5. Установите nmap, предварительно изучив информацию по имеющимся пакетам:
+   `dnf search nmap`
+   `dnf info nmap`
+   `dnf install nmap`
+   `dnf install nmap\*`
+
+   ![Установка nmap 1](image/installing_nmap_1.png)
+
+   ![Установка nmap 2](image/installing_nmap_2.png)
+
+   Поясните разницу между dnf install nmap и dnf install nmap\*.
+
+   - `dnf install nmap` устанавливает только пакет **nmap**, а `dnf install nmap\*` подбирает и ставит **все** доступные пакеты, имена которых начинаются с **nmap**.
+
+6. Удалите nmap:
+   `dnf remove nmap`
+   `dnf remove nmap\*`
+
+   ![Удаляем nmap](image/removing_nmap.png)
+
+7. Получите список имеющихся групп пакетов, затем установите группу пакетов RPM Development Tools:
+   `dnf groups list`
+   `LANG=C dnf groups list`
+   `dnf groups info "RPM Development Tools"`
+   `dnf groupinstall "RPM Development Tools"`
+   Для удаления группы пакетов RPM Development Tools можно воспользоваться командой
+   `dnf groupremove "RPM Development Tools"`
+
+   ![dnf группы 1](image/dnf_groups_1.png)
+
+   ![dnf группы 2](image/dnf_groups_2.png)
+
+   ![`dnf groupremove`](image/dnf_groupremove.png)
+
+8. Посмотрите историю использования команды dnf:
+   `dnf history`
+   и отмените последнее, например шестое по счёту, действие:
+   `dnf history undo 6`
+
+   ![`dnf history`](image/dnf_history.png)
+
+   ![`dnf history undo 6`](image/dnf_history_undo.png)
+
+## Использование rpm
+
+Предположим, что требуется установить текстовый браузер lynx из rpm-пакета.
+
+1. Скачайте rpm-пакет lynx: ([рис. @fig-003])
+   `dnf list lynx`
+   `dnf install lynx --downloadonly`
+2. Найдите каталог, в который был помещён пакет после загрузки: ([рис. @fig-003])
+   `find /var/cache/dnf/ -name lynx\*`
+3. Перейдите в этот каталог и затем установите rpm-пакет: ([рис. @fig-003])
+   `rpm -Uhv lynx-<версия>.rpm`
+4. Определите расположение исполняемого файла: ([рис. @fig-003])
+   `which lynx`
+
+   ![Устанавливаем lynx](image/lynx_install.png){#fig-003}
+
+5. Используя rpm, определите по имени файла, к какому пакету принадлежит lynx:
+   `rpm -qf $(which lynx)`
+   и получите дополнительную информацию о содержимом пакета, введя:
+   `rpm -qi lynx`
+
+   ![`rpm -qf -qi`](image/rpm-qf.png)
+
+6. Получите список всех файлов в пакете, используя:
+   `rpm -ql lynx`
+   а также выведите перечень файлов с документацией пакета, введя:
+   `rpm -qd lynx`
+   Посмотрите файлы документации, применив команду `man lynx`.
+
+   ![rpm -ql](image/rpm-ql.png)
+
+   ![rpm -qd](image/rpm-qd.png)
+
+   ![man lynx](image/man_lynx.png)
+
+7. Выведите на экран перечень и месторасположение конфигурационных файлов пакета: ([рис. @fig-004])
+   `rpm -qc lynx`
+
+8. Выведите на экран расположение и содержание скриптов, выполняемых при установке пакета: ([рис. @fig-004])
+   `rpm -q --scripts lynx`
+
+   ![rpm -qc --scripts](image/rpm-qc--scripts.png){#fig-004}
+
+9. В отдельном терминале под своей учётной записью запустите текстовый браузер lynx, чтобы проверить корректность установки пакета.
+
+![lynx](image/lynx.png)
+
+10. Вернитесь в терминал с учётной записью root и удалите пакет:
+    `rpm -e lynx`
+    `ls`
+
+    ![rpm -e lynx](image/remove_lynx.png)
+
+Предположим, что требуется из rpm-пакетов установить dnsmasq (DNS-, DHCP- и TFTPсервер).
+
+1. Установите пакет dnsmasq: ([рис. @fig-005])
+   `dnf list dnsmasq`
+   `dnf install dnsmasq`
+   и определите расположение исполняемого файла: ([рис. @fig-005])
+   `which dnsmasq`
+2. Определите по имени файла, к какому пакету принадлежит dnsmasq: ([рис. @fig-005])
+   `rpm -qf $(which dnsmasq)`
+   и получите дополнительную информацию о содержимом пакета: ([рис. @fig-005])
+   `rpm -qi dnsmasq`
+
+   ![dnsmasq 1](image/dnsmasq.png){#fig-005}
+
+3. Получите список всех файлов в пакете:
+   `rpm -ql dnsmasq`
+
+   ![rpm -ql dnsmasq](image/dnsmasq_2.png)
+
+   а также выведите перечень файлов с документацией пакета:
+   `rpm -qd dnsmasq`
+
+   ![rpm -qd dnsmasq](image/dnsmasq_3.png)
+
+   Посмотрите файлы документации, применив команду `man dnsmasq`.
+
+   ![`man dnsmasq`](image/man_dnsmasq.png)
+
+4. Выведите на экран перечень и месторасположение конфигурационных файлов пакета: ([рис. @fig-006])
+   `rpm -qc dnsmasq`
+
+5. Выведите на экран расположение и содержание скриптов, выполняемых при установке пакета: ([рис. @fig-006])
+   `rpm -q --scripts dnsmasq`
+   и поясните, для чего предназначены скрипты.
+
+   ![dnsmasq 4](image/dnsmasq_4.png){#fig-006}
+
+6. Вернитесь в терминал с учётной записью root и удалите пакет:
+   `rpm -e dnsmasq`
+
+   ![rpm -e dnsmasq](image/dnsmasq_remove.png)
+
+# Контрольные вопросы
+
+1. Какая команда позволяет вам искать пакет rpm, содержащий файл useradd?
+
+- rpm -qf /usr/sbin/useradd или dnf provides \*/useradd
+
+2. Какие команды вам нужно использовать, чтобы показать имя группы dnf, которая содержит инструменты безопасности и показывает, что находится в этой группе?
+
+- dnf groupinfo "Security Tools" (или dnf groupinfo --hidden "Security Tools")
+
+3. Какая команда позволяет вам установить rpm, который вы загрузили из Интернета и который не находится в репозиториях?
+
+- sudo rpm -Uvh /path/to/package.rpm (или sudo dnf install /path/to/package.rpm)
+
+4. Вы хотите убедиться, что пакет rpm, который вы загрузили, не содержит никакого опасного кода сценария. Какая команда позволяет это сделать?
+
+- rpm --checksig --nosignature /path/to/package.rpm (или rpm --checksig /path/to/package.rpm)
+
+5. Какая команда показывает всю документацию в rpm?
+
+- rpm -q --docs -p /path/to/package.rpm (или rpm -qd package-name)
+
+6. Какая команда показывает, какому пакету rpm принадлежит файл?
+
+- rpm -qf /path/to/file
 
 # Выводы
 
-Здесь кратко описываются итоги проделанной работы.
+Я получил навыки работы с репозиториями и менеджерами пакетов в Rocky.
 
 # Список литературы{.unnumbered}
 
